src/styles/global.css
/* would like to ignore ./src/pages/og-image/[slug].png.ts */
@import "tailwindcss";
/* config for tailwindcss-typography plugin */
@config "../../tailwind.config.ts";

/* IoskeleyMono Font Family */
@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-Light.woff2") format("woff2");
	font-weight: 300;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-LightItalic.woff2") format("woff2");
	font-weight: 300;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-Regular.woff2") format("woff2");
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-Italic.woff2") format("woff2");
	font-weight: 400;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-Medium.woff2") format("woff2");
	font-weight: 500;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-MediumItalic.woff2") format("woff2");
	font-weight: 500;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-SemiBold.woff2") format("woff2");
	font-weight: 600;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-SemiBoldItalic.woff2") format("woff2");
	font-weight: 600;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-Bold.woff2") format("woff2");
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-BoldItalic.woff2") format("woff2");
	font-weight: 700;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-ExtraBold.woff2") format("woff2");
	font-weight: 800;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "IoskeleyMono";
	src: url("../assets/fonts/ioskeleyMono/IoskeleyMono-ExtraBoldItalic.woff2") format("woff2");
	font-weight: 800;
	font-style: italic;
	font-display: swap;
}

/* use a selector-based strategy for dark mode */
@variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

/* you could refactor below to use light-dark(), depending on your target audience */
@theme {
	--color-global-bg: oklch(98.48% 0 0);
	--color-global-text: oklch(26.99% 0.0096 235.05);
	--color-link: oklch(55.44% 0.0431 185.69);
	--color-accent: oklch(55.27% 0.195 19.06);
	--color-accent-2: oklch(18.15% 0 0);
	--color-quote: oklch(55.27% 0.195 19.06);
}

@layer base {
	html {
		color-scheme: light dark;
		accent-color: var(--color-accent);

		&[data-theme="light"] {
			color-scheme: light;
			--color-global-bg: oklch(0.95 0.0074 84.93);
			--color-global-text: oklch(0.2768 0 0); /*grey: 282828*/
			--color-link: oklch(0.6217 0.1707 45.81); /*orange: d65d0e*/
			--color-accent: oklch(0.5756 0.0658 199.49); /* Dimeblue: #83a598 or Bight Blue: #458588*/
			--color-accent-2: oklch(0.4706 0.0816 215.81); /* Dimeblue: #83a598  */
			--color-quote: oklch(0.7652 0.1581 110.83); /* green: b8bb26 */
		}

		&[data-theme="dark"] {
			color-scheme: dark;
			/* --color-global-bg: oklch(0.45 0.0352 264.13); */
			--color-global-bg: oklch(0.2768 0 0); /*#282828*/
			--color-global-text: oklch(0.8941 0.0566 89.24); /*light grey: #ebdbb2*/
			--color-link: oklch(0.6217 0.1707 45.81); /*orange: d65d0e*/
			--color-accent: oklch(0.5756 0.0658 199.49); /* Dimeblue: #83a598 or Bight Blue: #458588*/
			--color-accent-2: oklch(0.6927 0.042 169.77); /* Dimeblue: #83a598  */
			--color-quote: oklch(0.7652 0.1581 110.83); /* green: b8bb26 */
		}
	}

	:target {
		scroll-margin-block: 5ex;
	}

	@view-transition {
		navigation: auto;
	}
}
/* ... */

